2004-06-22 Alain Magloire

	Fix PR 68176
	* mi/org/eclipse/cdt/debug/mi/core/command/CygwinMIEnvironmentCD.java

2004-06-09 Alain Magloire
	Fix for PR 66338
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/BreakpointManager.java
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/Condition.java
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/EventManager.java
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/model/Breakpoint.java

2004-06-09 Alain Magloire

	Keep the breakpoint disable when doing
	deffered breakpoint installation.

	* cdt/org/eclpse/cdt/debug/mi/core/cdi/EventManager.java

2004-06-08 Alain Magloire

	Fix for PR 65077

	* mi/org/eclipse/cdt/debug/mi/core/command/CygwinCommandFactory.java
	* mi/org/eclipse/cdt/debug/mi/core/command/CygwinMIEnvironmentCD.jav
	* src/org/eclipse/cdt/debug/mi/core/CygwinGDBDebugger.java

2004-06-02 Mikhail Khodjaiants

	Moved externalized strings to the right property file.

	* cdi/org/eclipse/cdt/debug/mi/core/cdi/CdiResources.properties
	* src/org/eclipse/cdt/debug/mi/core/MIPluginResources.properties

2004-0602 Alain Magloire

	Overload getFullName() for registerObject

	* cdi/org/eclipse/cdt/debug/mi/core/cdi/mode/RegisterObject.java

2004-05-28 Alain Magloire

	GDB has special "types"
	int8_t int16_t etc ... parse them also.

	* cdi/org/eclipse/cdt/debug/mi/core/cdi/SourceManager.java
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/model/Register.java
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/model/RegisterObject.java
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/model/type/ArrayValue.java

2004-05-28 Alain Magloire

	QuickFix for PR 58249

	* cdi/org/eclipse/cdt/debug/mi/core/cdi/SourceManager.java
2004-05-28 Alain Magloire

	Error in looking for the CIdentifier.
	* src/org/eclipse/cdt/debug/mi/core/GDBTypeParser.java

2004-05-28 Alain Magloire

	Fix to PR 60020.
	GDB returns the children when a pointer
	points to a structure.
	Also ignore the keyword "const" when parsing.

	* cdi/org/eclipse/cdt/debug/mi/core/cdi/SourceManager.java